
IMP: (07/13/05, GVG) Making public fix for bug 312 (in previous commit was only available in debug mode).

IMP: (07/13/05, GVG) Poly resistors added in Schematics. They were implemented as variant of normal resistors
(following similar to capacitor approach).

IMP: (07/13/05, IM) NCC GUI features: Export Assertion failures,
Export conflicts, unrecognized MOSes

IMP: (07/13/05, RK) Add method to count Parts, Wires, and Ports for GUI

BUG: (07/13/05, RK) Bug# 433. Changes for GUI cause NCC to throw an Exception for designs with black boxes (heater, qLite).

BUG: (07/13/05, GVG) Problems with DRC dates stored (Bug #422) in exhaustive mode. Root cause: new checkMinDefect
in checkDist.
FIX: Remember if there ware min defect errors in exhaustive mode.
 
IMP/MAN: (07/12/05, GVG) Consolidating majority of minor/major change checking calls by just a global call.
Adding tooltip to explain significant vs insignificant changes.
Another solution for Bug #428: change type Type.OBJECTRENAME marked as major.

BUG: (07/12/05, GVG) Fix for invalid DRC resolution errors with rotated nodes (Bug #432)
FIX: resolution must be checked after transformation is applied in checkNodeInst().

IMP: (07/11/05, GVG) Highlighter working now for new 90nm resistors. PrimitiveNode.Function.RESIST in layout
primitive nodes and ability to select the nearest port (similar to transistors).

IMP: (07/11/05, IM) Added NCC GUI

BUG: (07/11/05, IM) NetworkHighlighter wasn't highlighting networks without arcs
FIX: (07/11/05, IM) Make NetworkHighlighter highlight all the PortInsts on a Network

BUG: (07/11/05, IM) comparison of two VarContexts doesn't work beacuse pointer 
comparison of Nodables is not reliable
FIX: (07/11/05, IM) Compare Nodable parents and names

IMP: (07/11/05, GVG) LayerTab class extends JPanel instead of JFrame (suggested after Dima ran profiler).

IMP/MAN: (07/11/05, GVG) Changing exports should mark library as changed (Bug #428).