@@ -29,6 +29,10 @@ IMP: (07/13/05, GVG) Poly resistors added in Schematics. They were implemented a
 IMP: (07/13/05, IM) NCC GUI features: Export Assertion failures,
 Export conflicts, unrecognized MOSes
 
+IMP: (07/13/05, RK) Double default height of Cells generated by MOCMOS gate layout generator
+
+IMP: (07/13/05, RK) Allow the detection of multiple "bad transistor type" errors
+
 IMP: (07/13/05, RK) Add method to count Parts, Wires, and Ports for GUI
 
 BUG: (07/13/05, RK) Bug# 433. Changes for GUI cause NCC to throw an Exception for designs with black boxes (heater, qLite).
